--- a/css/bg.css
+++ b/css/bg.css
@@ -8,6 +8,7 @@
 	margin: 0; box-shadow: 0 0 1em 0px black inset; border: none; background: #dddddd;
 }
 
+.ui-tooltip { font-size: small; padding: 0.4em }
 
 #bg-header {
 /*	display: block; position: fixed; width: 100%; */
@@ -28,7 +29,9 @@
 	width: 18px;
 	height: 18px;
 }
+/* 
 #bg-header #bg-err .ui-icon-alert { background-position: 1px -143px; }
+ */
 #bg-header div.bg-hide { display: none; }
 
 
@@ -82,16 +85,25 @@
 
 #bg-music .bg-album { display: table; width: 100%; }
 #bg-music .bg-album-row { display: table-row; }
-#bg-music .bg-album-art-cell { display: table-cell; width: 100px; vertical-align: top; }
+#bg-music .bg-album-meta-cell { display: table-cell; width: 100px; vertical-align: top; }
 #bg-music .bg-album-art { width: 100px; height: 100px; }
 #bg-music .bg-album-content-cell { display: table-cell; padding-left: 0.5em;}
 #bg-music .bg-album-title {
 	display: table-cell; height: 1.5em; vertical-align: top;
 	padding-left: 0.5em; color: black; font-size: large; font-weight: bold;
 }
+#bg-music .bg-album-meta-cell label {
+	height: 18px; width: 18px; margin: 0.08em; vertical-align: middle;
+	border-radius: 6px; outline-style: none;
+}
+
 #bg-music .bg-accordion-header { height: 1.2em; padding: 0 0 0 2em; margin-bottom: 1px;}
 #bg-music .bg-accordion-header button {
 	float: left; height: 18px; width: 18px; margin: 0.08em; vertical-align: middle;
+	border-radius: 6px; outline-style: none;
+}
+#bg-music .bg-accordion-header a {
+	float: left; height: 16px; width: 16px; margin: 0.08em; vertical-align: middle;
 	border-radius: 6px; outline-style: none;
 }
 #bg-music .bg-accordion-header button .ui-button-text { padding: 0; margin: 0; }
@@ -101,7 +113,9 @@
 	display: table-cell; height: 100%; vertical-align: middle; font-size: medium;
 }
 #bg-music .bg-track-controls { display: table-cell; float: right; }
+/* 
 #bg-music .bg-track-play-pause-button { background-position: 0 -160px; }
+ */
 #bg-music .bg-track-shuttle {
 	display: table-cell; float: left; height: 100%; margin-left: 0.5em; margin-right: 0.5em;
 }
@@ -164,19 +178,6 @@
 
 #bg-blog { width: 100%; height: 100% }
 #bg-blog iframe { width: 100%; height: 100%; margin: 0; padding: 0; border: none; }
-/*
-body.blog,body.single,body.archive { background-color: white; }
-body.blog #header,body.single #header,body.archive #header { display: none; }
-body.blog #wrapper,body.single #wrapper,body.archive #wrapper {
-	position: absolute; top: 1em; right: 1em; bottom: 2.25em; left: 1em; margin: 0;
-	box-shadow: 0 0 1em 0px black inset; background-color: #dddddd;
-	overflow-y: overlay; overflow-x: hidden; border-radius: 6px;
-}
-body.blog.home #footer,body.single #footer,body.archive #footer { display: none; }
-body.blog #wpstats,body.single #wpstats,body.archive #wpstats { display: none; }
-body.blog #wpstats2,body.single #wpstats2,body.archive #wpstats2 { display: none; }
-body.blog a:link,body.single a:link,body.archive a:link { color: #3383BB; }
-*/
 
 
 #bg-social { position: absolute; width: 100%; height: 98%; border-collapse: collapse; }
