--- a/css/bg.css
+++ b/css/bg.css
@@ -12,7 +12,7 @@
 
 #bg-header {
 /*	display: block; position: fixed; width: 100%; */
-	font-size: 40px; font-weight: bold; text-align: center; padding: 0.4em;
+	font-size: 40px; font-weight: bold; text-align: center; padding: 0.2em;
 	letter-spacing: 0.1em; text-shadow: 0 0 0.5em aliceblue;
 //	-webkit-text-stroke: 1px black;
 }
@@ -44,8 +44,13 @@
 	position: fixed; top: 0; right: 0; bottom: 0; left: 0; border: none; padding: 0; height: 0;
 }
 
+/* HIDE TABS TEXT ON PAGE LOAD, SHOW AFTER UI SETUP */
+#bg-body>.bg-top-level-tabs>ul { display: none; }
+#bg-body>.bg-top-level-tabs>ul.ui-tabs-nav { display: block; }
+
 /* HOW HIGH TO PUT THE TABS. LOWER NUMBERS ARE HIGHER */
-#bg-body>.bg-top-level-tabs>ul { top: 25em; }
+#bg-body>.bg-top-level-tabs>ul { top: 24em; }
+
 #bg-body>.bg-top-level-tabs>ul {
 	position: absolute; left: 3em; z-index: 1; height: 1.5em; border: 0;
 	font-size: medium; background: none; padding: 0;
@@ -74,7 +79,7 @@
 
 
 #bg-contents {
-	display: block; position: fixed; top: 5em; right: 1em; bottom: 1.5em; left: 2.5em;
+	display: block; position: fixed; top: 4em; right: 1em; bottom: 1.5em; left: 2.5em;
 	padding: 0.5em; border-radius: 8px; overflow-x: hidden; overflow-y: auto; border: 1px solid black;
 	background-color: white;
 	box-shadow: 0 0 1em 0 black; font-size: medium;
