--- a/css/bg.css
+++ b/css/bg.css
@@ -24,11 +24,7 @@
 	background-position: -191px -111px;
 }
 #bg-header #bg-prefs-button .ui-button-text { padding: 0; margin: 0; }
-#bg-header #bg-err {
-	margin-top: 1px;
-	width: 18px;
-	height: 18px;
-}
+#bg-header #bg-err { margin-top: 1px; width: 18px; height: 18px; }
 /* 
 #bg-header #bg-err .ui-icon-alert { background-position: 1px -143px; }
  */
@@ -191,19 +187,23 @@
 #bg-social td { position: absolute; height: 590px; padding: 0 }
 #bg-social iframe { position: absolute; width: 100%; height: 100%; margin: 0; padding: 0; border: none; }
 
-#bg-social #bg-facebook { left: 0; right: 36% }
-#bg-social #bg-twitter { left: 65%; right: 2% }
-
-
-#bg-begging { width: 100%; height: 100% }
-#bg-begging iframe { width: 100%; height: 100%; margin: 0; padding: 0; border: none; }
+#bg-social #bg-facebook { left: 0; right: 36%; height: 100% }
+#bg-social #bg-facebook div { height: 100% !important }
+#bg-social #bg-facebook div span { height: 100% !important }
+#bg-social #bg-facebook div span iframe { height: 100% !important }
+#bg-social #bg-twitter { left: 65%; right: 2%; height: 100% }
+#bg-social #bg-twitter iframe { height: 100% !important }
 
 
 #bg-tribbulous { width: 100%; height: 100% }
 #bg-tribbulous iframe { width: 100%; height: 100%; margin: 0; padding: 0; border: none; }
 
+
 #bg-github { width: 100%; height: 100% }
 #bg-github iframe { width: 100%; height: 100%; margin: 0; padding: 0; border: none; }
+
+
+#bg-cannot-save-badges-alert.ui-dialog-content { font-size: 0.8em; }
 
 
 #bg-footer {
