--- a/css/bg-mobile.css
+++ b/css/bg-mobile.css
@@ -13,17 +13,11 @@
 #bg-music .bg-album-art-small { width: 1.25em; height: 1.25em; }
 
 #bg-music .bg-album-accordion { margin-right: 1em;}
-#bg-music .bg-accordion-header { height: 2.5em; padding: 0 0 0 2em; margin-bottom: 1px; }
+#bg-music .bg-accordion-header { height: 2.5em; padding: 0 0 0 2em; margin-bottom: 1px; outline-style: none; }
 #bg-music .bg-accordion-header button {
 	float: left; height: 2.25em; width: 2.25em; margin: 0.1em; vertical-align: middle;
 	border-radius: 6px; outline-style: none;
 }
-/* 
-#bg-music .bg-accordion-header a {
-	float: left; height: 16px; width: 16px; margin: 0.08em; vertical-align: middle;
-	border-radius: 6px; outline-style: none;
-}
- */
 #bg-music .bg-accordion-header button .ui-button-text { padding: 0; margin: 0; }
 #bg-music .bg-accordion-body { overflow: hidden }
 #bg-music .bg-accordion-body .ui-tabs-panel { max-height: 25em; padding: 0.5em; overflow: auto; }
@@ -40,7 +34,7 @@
 	border-top: 0; border-left: 0; border-right: 0; font-size: small;
 	border-top-left-radius: 0; border-top-right-radius: 0; padding-left: 1em; padding-right: 1em;
 }
-#bg-music .bg-tabs-nav a { padding: 0.1em 0.25em 0.1em 0.25em; outline-style: none; }
+#bg-music .bg-tabs-nav a { font-size: medium; padding: 0.1em 0.25em 0.1em 0.25em; outline-style: none; }
 #bg-music .bg-lyrics-now { color: #599fcf; }
 #bg-music .bg-lyrics-elapsed { color: #3383bb; }
 #bg-music .bg-track-notes img { display: block; margin: auto; }
