--- a/css/bg-common.css
+++ b/css/bg-common.css
@@ -1,6 +1,16 @@
 #bg-body { position: fixed; width: 100%; height: 100%; margin: 0; border: none; background: #dddddd; }
 #bg-body .bg-hide { display: none; }
 
+#bg-page-description { display: none; }
+#bg-badge-stuff { display: none; }
+#bg-cannot-save-badges-alert { display: none; }
+#bg-new-badge-alert { display: none; }
+.ui-dialog .ui-button-text-only { outline-style: none; }
+.ui-dialog .ui-button-text-only .ui-button-text { padding: 0.25em 0.5em; outline-style: none; }
+.ui-dialog .ui-dialog-buttonpane { margin: 0; padding: 0; }
+.bg-alert-icon { float: left; margin: 0 0.5em 3em 0; }
+#bg-new-badge-icon { float: left; margin: 0 0.5em 1em 0; width: 4em; height: 4em; }
+
 #bg-header { font-weight: bold; text-align: center; text-shadow: 0 0 0.5em aliceblue; }
 
 #bg-body>.bg-top-level-tabs {
