--- a/css/bg-immobile.css
+++ b/css/bg-immobile.css
@@ -7,10 +7,36 @@
 .ui-tooltip { font-size: small; padding: 0.4em }
 
 #bg-header { font-size: 2.5em; padding: 0.25em; letter-spacing: 0.1em; }
-#bg-header div { margin-right: 0.1em; float: right; }
-#bg-header #bg-prefs-button { width: 20px; height: 20px; outline-style: none; background-position: -191px -111px; }
-#bg-header #bg-prefs-button .ui-button-text { padding: 0; margin: 0; }
-#bg-header #bg-err { margin-top: 1px; width: 18px; height: 18px; }
+#bg-header div.bg-right { margin-right: 0.1em; float: right; }
+#bg-badge-stuff { position: absolute; top: 0.5em; left: 0.5em }
+#bg-badges {
+	display: inline; vertical-align: top; float: left;
+	font-family: sans-serif; font-weight: normal; font-size: small; letter-spacing: 0;
+}
+#bg-badges img { display: inline; width: 1.25em; height: 1.25em; margin-right: 0.2em; vertical-align: middle; }
+#bg-badges label { height: 1.1em; width: 1.1em; vertical-align: middle; border-radius: 0.25em; outline-style: none; }
+#bg-add-badge-dialog {
+	display: inline; vertical-align: top; float: left;
+	font-family: sans-serif; font-weight: normal; font-size: small; letter-spacing: 0;
+}
+#bg-add-badge-dialog input {
+	width: 7em; padding: 0.1em; margin-left: 0.1em; outline-style: none; border-radius: 0.25em;
+	font-family: inherit; font-weight: inherit; font-size: inherit; letter-spacing: inherit;
+}
+#bg-add-badge-dialog button {
+	margin-left: -0.1em; border-radius: 0.25em; outline-style: none;
+	font-family: inherit; font-weight: inherit; font-size: inherit; letter-spacing: inherit;
+}
+#bg-add-badge-dialog span {
+	padding: 0.1em 0.25em; outline-style: none;
+	font-family: inherit; font-weight: inherit; font-size: inherit; letter-spacing: inherit;
+}
+#bg-global-stuff {
+	display: inline; vertical-align: top; float: right;
+	font-family: sans-serif; font-weight: normal; font-size: small; letter-spacing: 0;
+}
+#bg-prefs-button { width: 1em; height: 1em; }
+#bg-err { width: 1em; height: 1em; }
 
 #bg-body>#bg-shadow-box>ul {
 	margin: 0px; padding: 0px; background: rgba(0,0,0,0.55); z-index: -1; box-shadow: 0 0 1em 1px black;
