--- a/css/bg-immobile.css
+++ b/css/bg-immobile.css
@@ -34,7 +34,7 @@
 #bg-social-buttons { display: inline; vertical-align: top; float: right; margin: 0.5em; }
 #bg-social-buttons>a { display: none; }
 #bg-social-buttons .twitter-follow-button { vertical-align: top; }
-#bg-social-buttons .twitter-follow-button-rendered { display: inline; }
+#bg-social-buttons .twitter-follow-button-rendered { display: inline; position: relative !important; }
 #bg-global-stuff {
 	display: inline; vertical-align: top; float: right;
 	font-family: sans-serif; font-weight: normal; font-size: small; letter-spacing: 0;
