--- a/css/bg-immobile.css
+++ b/css/bg-immobile.css
@@ -31,7 +31,8 @@
 	padding: 0.1em 0.25em; outline-style: none;
 	font-family: inherit; font-weight: inherit; font-size: inherit; letter-spacing: inherit;
 }
-#bg-social-buttons { display: inline; vertical-align: top; float: left; margin: 0.5em; }
+#bg-social-buttons { display: inline; vertical-align: top; float: left; margin: 0.75em; }
+#bg-social-buttons { background-color: aliceblue; box-shadow: 0 0 0.5em 0.25em aliceblue; border-radius: 0.2em; }
 #bg-social-buttons>a { display: none; }
 #bg-social-buttons .twitter-follow-button { vertical-align: top; }
 #bg-social-buttons .twitter-follow-button-rendered { display: inline; position: relative !important; }
