--- a/css/bg-immobile.css
+++ b/css/bg-immobile.css
@@ -7,9 +7,11 @@
 .ui-tooltip { font-size: small; padding: 0.4em }
 .bg-left { float: left; }
 .bg-right { float: right; }
+.ui-effects-transfer { border: 2px dotted gray; }
 
 #bg-header { font-size: 2.5em; padding: 0.25em; letter-spacing: 0.1em; }
 #bg-header div.bg-right { margin-right: 0.1em; float: right; }
+/* 
 #bg-badge-stuff { position: absolute; top: 0.5em; left: 0.5em }
 #bg-badges {
 	display: inline; vertical-align: top; float: left;
@@ -33,6 +35,30 @@
 	padding: 0.1em 0.25em; outline-style: none;
 	font-family: inherit; font-weight: inherit; font-size: inherit; letter-spacing: inherit;
 }
+ */
+#bg-badge-stuff { position: absolute; bottom: 0.75em; left: 0.75em; z-index: 1; }
+#bg-badges {
+	display: inline; font-family: sans-serif; font-weight: normal; font-size: small; letter-spacing: 0;
+}
+#bg-badges img { display: inline; width: 1.25em; height: 1.25em; }
+#bg-badges label { height: 1.1em; width: 1.1em; border-radius: 0.25em; outline-style: none; }
+#bg-add-badge-dialog {
+	display: inline; vertical-align: top;
+	font-family: sans-serif; font-weight: normal; font-size: small; letter-spacing: 0;
+}
+#bg-add-badge-dialog input {
+	width: 7em; padding: 0.1em; margin-left: 0.1em; outline-style: none; border-radius: 0.25em;
+	font-family: inherit; font-weight: inherit; font-size: inherit; letter-spacing: inherit;
+}
+#bg-add-badge-dialog button {
+	margin-left: -0.1em; border-radius: 0.25em; outline-style: none;
+	font-family: inherit; font-weight: inherit; font-size: inherit; letter-spacing: inherit;
+}
+#bg-add-badge-dialog span {
+	padding: 0.1em 0.25em; outline-style: none;
+	font-family: inherit; font-weight: inherit; font-size: inherit; letter-spacing: inherit;
+}
+
 .bg-social-buttons { display: inline; vertical-align: top; margin: 0.75em; }
 .bg-social-buttons { background-color: aliceblue; box-shadow: 0 0 0.5em 0.25em aliceblue; border-radius: 0.2em; }
 .bg-social-buttons>a { display: none; }
