--- a/css/bg-mobile.css
+++ b/css/bg-mobile.css
@@ -1,3 +1,4 @@
+#bg-nag { display: none !important }
 #bg-body { box-shadow: 0 0 0.25em 0px black inset; }
 
 .ui-tooltip { display: none !important; }
@@ -9,7 +10,7 @@
 
 #bg-body>#bg-shadow-box { display: none; }
 
-#bg-contents { top: 2em; bottom: 0; width: 100%; padding: 0.25em; box-shadow: 0 0 0.25em 0 black; }
+#bg-contents { top: 2em !important; bottom: 0; width: 100%; padding: 0.25em; box-shadow: 0 0 0.25em 0 black; }
 
 #bg-music .bg-album-meta-cell { display: none; }
 #bg-music .bg-album-art-small { width: 1.25em; height: 1.25em; }
