--- a/css/bg-common.css
+++ b/css/bg-common.css
@@ -4,9 +4,6 @@ body { position: fixed; width: 100%; height: 100%; margin: 0; border: none; }
 #bg-body .bg-hide { display: none; }
 
 #bg-page-description { display: none; }
-/* 
-#bg-badge-stuff { display: none; }
- */
 #bg-cannot-save-badges-alert { display: none; }
 #bg-new-badge-alert { display: none; }
 #bg-nsfw-alert { width: 600px; display: none; }
@@ -21,16 +18,12 @@ body { position: fixed; width: 100%; height: 100%; margin: 0; border: none; }
 #bg-header { position: absolute; width: 100%; font-weight: bold; text-align: center; text-shadow: 0 0 0.5em aliceblue; }
 
 #bg-body>.bg-top-level-tabs {
-	background: none; border: none; z-index: 1;
-	position: relative; top: 0; right: 0; bottom: 0; left: 0; border: none; padding: 0; height: 0;
+	background: none; border: none; z-index: 1; position: relative; top: 0; right: 0; bottom: 0; left: 0; border: none; padding: 0; height: 0;
 }
 #bg-body>.bg-top-level-tabs>ul { display: none; }
 
-#bg-contents {
-	display: block; position: fixed; overflow-x: hidden; overflow-y: auto; border: 1px solid black; font-size: medium;
-}
+#bg-contents { display: block; position: fixed; overflow-x: hidden; overflow-y: auto; border: 1px solid black; font-size: medium; }
 #bg-contents { background-color: aliceblue; }
-
 #bg-contents>div { padding: 0; }
 #bg-contents>table { padding: 0; }
 
@@ -41,3 +34,6 @@ body { position: fixed; width: 100%; height: 100%; margin: 0; border: none; }
 	display: inline; height: 1.5em; vertical-align: top;
 	padding-left: 0.5em; color: black; font-size: large; font-weight: bold;
 }
+#bg-music .bg-track-name-jcc-img { position: absolute; top: 2px; display: inline; width: 1em; height: 1em; margin-left: 0.25em }
+#bg-music .bg-track-jcc fieldset { width: 0; }
+#bg-music .bg-track-jcc iframe { width: 480px; height: 270px; border: 0 }
