--- a/css/bg-immobile.css
+++ b/css/bg-immobile.css
@@ -21,39 +21,15 @@
 
 #bg-header { font-size: 2.5em; padding: 0.25em; letter-spacing: 0.1em; }
 #bg-header div.bg-right { margin-right: 0.1em; float: right; }
-/* 
-#bg-badge-stuff { position: absolute; top: 0.5em; left: 0.5em }
-#bg-badges {
-	display: inline; vertical-align: top; float: left;
-	font-family: sans-serif; font-weight: normal; font-size: small; letter-spacing: 0;
-}
-#bg-badges img { display: inline; width: 1.25em; height: 1.25em; margin-right: 0.2em; vertical-align: middle; }
-#bg-badges label { height: 1.1em; width: 1.1em; vertical-align: middle; border-radius: 0.25em; outline-style: none; }
-#bg-add-badge-dialog {
-	display: inline; vertical-align: top; float: left;
-	font-family: sans-serif; font-weight: normal; font-size: small; letter-spacing: 0;
-}
-#bg-add-badge-dialog input {
-	width: 7em; padding: 0.1em; margin-left: 0.1em; outline-style: none; border-radius: 0.25em;
-	font-family: inherit; font-weight: inherit; font-size: inherit; letter-spacing: inherit;
-}
-#bg-add-badge-dialog button {
-	margin-left: -0.1em; border-radius: 0.25em; outline-style: none;
-	font-family: inherit; font-weight: inherit; font-size: inherit; letter-spacing: inherit;
-}
-#bg-add-badge-dialog span {
-	padding: 0.1em 0.25em; outline-style: none;
-	font-family: inherit; font-weight: inherit; font-size: inherit; letter-spacing: inherit;
-}
- */
+
 #bg-badge-stuff { position: absolute; bottom: 0.75em; left: 0.75em; z-index: 1; }
-#bg-badges {
-	display: inline; font-family: sans-serif; font-weight: normal; font-size: small; letter-spacing: 0;
-}
-#bg-badges img { display: inline; width: 1.25em; height: 1.25em; }
-#bg-badges label { height: 1.1em; width: 1.1em; border-radius: 0.25em; outline-style: none; }
+#bg-badge-stuff #bg-badges { display: inline; font-family: sans-serif; font-weight: normal; font-size: small; letter-spacing: 0; }
+#bg-badge-stuff #bg-badges img { display: block; width: 1.25em; height: 1.25em; margin: 2px; }
+#bg-badge-stuff #bg-badges label { height: 1.1em; width: 1.1em; border-radius: 0.25em; outline-style: none; }
+#bg-badge-stuff #bg-add-badge-button { height: 18px; width: 18px; vertical-align: middle; border-radius: 4px; outline-style: none; padding: 0 }
+#bg-badge-stuff #bg-add-badge-button .ui-button-icon { margin: -9px 0 0 0 }
 #bg-add-badge-dialog {
-	display: inline; vertical-align: top;
+	display: inline; padding: 0.4em 0.2em 0.5em 0.2em; background-color: white; border-radius: 0.25em; box-shadow: 0 0 0.1em 0.1em aliceblue;
 	font-family: sans-serif; font-weight: normal; font-size: small; letter-spacing: 0;
 }
 #bg-add-badge-dialog input {
@@ -61,7 +37,7 @@
 	font-family: inherit; font-weight: inherit; font-size: inherit; letter-spacing: inherit;
 }
 #bg-add-badge-dialog button {
-	margin-left: -0.1em; border-radius: 0.25em; outline: none;
+	margin-left: -0.1em; margin-right: 0.4em; border-radius: 0.25em; outline: none; height: 18px; padding: 0 0.25em;
 	font-family: inherit; font-weight: inherit; font-size: inherit; letter-spacing: inherit;
 }
 #bg-add-badge-dialog span {
@@ -77,16 +53,11 @@
 .bg-patreon-button { display: none; vertical-align: top; margin-right: 0; border-radius: 3px; outline-style: none; }
 .bg-patreon-button.ui-button { display: inline; height: 20px; padding: 0 4px }
 .bg-patreon-button img { height: 14px; width: 60px; }
-#bg-global-stuff {
-	display: inline; vertical-align: top; float: right;
-	font-family: sans-serif; font-weight: normal; font-size: small; letter-spacing: 0;
-}
+#bg-global-stuff { display: inline; vertical-align: top; float: right; font-family: sans-serif; font-weight: normal; font-size: small; letter-spacing: 0; }
 #bg-prefs-button { width: 1em; height: 1em; }
 #bg-err { width: 1em; height: 1em; }
 
-#bg-body>#bg-shadow-box>ul {
-	margin: 0px; padding: 0px; background: rgba(0,0,0,0.55); z-index: -1; box-shadow: 0 0 1em 1px black;
-}
+#bg-body>#bg-shadow-box>ul { margin: 0px; padding: 0px; background: rgba(0,0,0,0.55); z-index: -1; box-shadow: 0 0 1em 1px black; }
 
 /* HIDE TABS TEXT ON PAGE LOAD, SHOW AFTER UI SETUP */
 #bg-body>.bg-top-level-tabs>ul.ui-tabs-nav { display: block; }
@@ -94,46 +65,31 @@
 /* HOW HIGH TO PUT THE TABS. LOWER NUMBERS ARE HIGHER */
 #bg-body>.bg-top-level-tabs>ul { top: 24em; }
 
-#bg-body>.bg-top-level-tabs>ul {
-	position: absolute; left: 3em; z-index: 1; height: 1.5em; border: 0; font-size: medium; background: none; padding: 0;
-}
+#bg-body>.bg-top-level-tabs>ul { position: absolute; left: 3em; z-index: 1; height: 1.5em; border: 0; font-size: medium; background: none; padding: 0; }
 #bg-body>.bg-top-level-tabs>ul>li.ui-state-default {
-	height: 100%; margin: 0; float: right; margin-left: 1px; margin-right: 1px;
-	border-bottom: 1px solid rgba(0,0,0,0.5); margin-top: -1px;
+	height: 100%; margin: 0; float: right; margin-left: 1px; margin-right: 1px; border-bottom: 1px solid rgba(0,0,0,0.5); margin-top: -1px;
 }
 #bg-body>.bg-top-level-tabs>ul>li.ui-state-active { border-bottom: none; }
 #bg-body>.bg-top-level-tabs>ul>li>a { padding: 0.1em 0.5em 0em 0.5em; outline-style: none; vertical-align: bottom; }
 #bg-body>.bg-top-level-tabs>ul {
-	-webkit-transform-origin: 0 2em; -webkit-transform: rotate(-90deg);
-	-moz-transform-origin: 0 2em; -moz-transform: rotate(-90deg);
-	-ms-transform-origin: 0 2em; -ms-transform: rotate(-90deg);
-	-o-transform-origin: 0 2em; -o-transform: rotate(-90deg);
-	transform-origin: 0 2em; transform: rotate(-90deg);
+	-webkit-transform-origin: 0 2em; -moz-transform-origin: 0 2em; -ms-transform-origin: 0 2em; -o-transform-origin: 0 2em; transform-origin: 0 2em;
+	-webkit-transform: rotate(-90deg); -moz-transform: rotate(-90deg); -ms-transform: rotate(-90deg); -o-transform: rotate(-90deg); transform: rotate(-90deg);
 	filter: progid:DXImageTransform.Microsoft.Matrix(M11=-0.00000000, M12=1.00000000, M21=-1.00000000, M22=-0.00000000, sizingMethod='auto expand');
 	top: 9em\9; left: 1em\9;
 }
 
-#bg-contents {
-	top: 4em; right: 1em; bottom: 1.5em; left: 2.5em; padding: 0.5em; border-radius: 8px; box-shadow: 0 0 1em 0 black;
-}
+#bg-contents { top: 4em; right: 1em; bottom: 1.5em; left: 2.5em; padding: 0.5em; border-radius: 8px; box-shadow: 0 0 1em 0 black; }
 #bg-contents>div { padding: 0; }
 #bg-contents>table { padding: 0; }
 
 #bg-music .bg-album-meta-cell { display: table-cell; width: 100px; vertical-align: top; }
 #bg-music .bg-album-art { width: 100px; height: 100px; }
 #bg-music .bg-album-art-small { display: none; }
-#bg-music .bg-album-meta-cell button {
-	height: 18px; width: 18px; vertical-align: middle; border-radius: 4px; outline-style: none; padding: 0
-}
+#bg-music .bg-album-meta-cell button {height: 18px; width: 18px; vertical-align: middle; border-radius: 4px; outline-style: none; padding: 0 }
 #bg-music .bg-album-meta-cell .ui-button-icon { margin: -5px 0 0 0 }
 #bg-music .bg-accordion-header { height: 1.2em; padding: 0 0 0 0.25em; margin-bottom: 1px; outline-style: none; }
-#bg-music .bg-accordion-header button {
-	float: left; height: 18px; width: 18px; margin: 1px; padding: 1px; border-radius: 4px; outline-style: none;
-}
-#bg-music .bg-accordion-header a {
-	float: left; height: 16px; width: 16px; margin: 0.08em; vertical-align: middle;
-	border-radius: 6px; outline-style: none;
-}
+#bg-music .bg-accordion-header button { float: left; height: 18px; width: 18px; margin: 1px; padding: 1px; border-radius: 4px; outline-style: none; }
+#bg-music .bg-accordion-header a { float: left; height: 16px; width: 16px; margin: 0.08em; vertical-align: middle; border-radius: 6px; outline-style: none; }
 #bg-music .bg-accordion-header button .ui-button-text { padding: 0; margin: 0; }
 #bg-music .bg-accordion-body { overflow: hidden }
 #bg-music .bg-accordion-body .ui-tabs-panel { max-height: 25em; padding: 0.5em; overflow: auto; }
@@ -143,8 +99,8 @@
 #bg-music .bg-accordion-body { padding: 0; border-top-left-radius: 0; border-top-right-radius: 0; }
 #bg-music .bg-accordion-body div { font-size: small; white-space: pre-wrap; }
 #bg-music .bg-tabs-nav {
-	border-top: 0; border-left: 0; border-right: 0; font-size: small;
-	border-top-left-radius: 0; border-top-right-radius: 0; padding-left: 1em; padding-right: 1em;
+	border-top: 0; border-left: 0; border-right: 0; border-top-left-radius: 0; border-top-right-radius: 0;
+	padding-left: 1em; padding-right: 1em; font-size: small; 
 }
 #bg-music .bg-tabs-nav a { padding: 0.1em 0.25em 0.1em 0.25em; outline-style: none; }
 #bg-music .bg-lyrics-now { color: #599fcf; }
