--- a/css/bg-mobile.css
+++ b/css/bg-mobile.css
@@ -18,8 +18,7 @@
 #bg-music .bg-album-accordion { margin-right: 1em;}
 #bg-music .bg-accordion-header { height: 2.5em; padding: 0 0 0 0.5em; margin-bottom: 1px; outline-style: none; }
 #bg-music .bg-accordion-header button {
-	float: left; height: 2.25em; width: 2.25em; margin: 0.1em; vertical-align: middle;
-	border-radius: 6px; outline-style: none;
+	float: left; height: 2.25em; width: 2.25em; margin: 0.1em; vertical-align: middle; border-radius: 6px; outline-style: none;
 }
 #bg-music .bg-accordion-header button .ui-button-text { padding: 0; margin: 0; }
 #bg-music .bg-accordion-body { overflow: hidden }
@@ -36,8 +35,8 @@
 #bg-music .bg-accordion-body { padding: 0; border-top-left-radius: 0; border-top-right-radius: 0; }
 #bg-music .bg-accordion-body div { font-size: small; white-space: pre-wrap; }
 #bg-music .bg-tabs-nav {
-	border-top: 0; border-left: 0; border-right: 0; font-size: small;
-	border-top-left-radius: 0; border-top-right-radius: 0; padding-left: 1em; padding-right: 1em;
+	border-top: 0; border-left: 0; border-right: 0; border-top-left-radius: 0; border-top-right-radius: 0;
+	padding-left: 1em; padding-right: 1em; font-size: small;
 }
 #bg-music .bg-tabs-nav a { font-size: medium; padding: 0.1em 0.25em 0.1em 0.25em; outline-style: none; }
 #bg-music .bg-lyrics-now { color: #599fcf; }
